force-app/main/default/objects/vlocity_ps__UserNotification__c/fields/vlocity_ps__ActionLink__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__ActionLink__c</fullName>
    <label>Action Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>