force-app/main/default/objects/vlocity_ps__UserNotification__c/fields/vlocity_ps__DismissedDate__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__DismissedDate__c</fullName>
    <label>Dismissed</label>
    <type>DateTime</type>
</CustomField>