force-app/main/default/objects/vlocity_ps__UserNotification__c/fields/vlocity_ps__ExpiresDate__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__ExpiresDate__c</fullName>
    <label>Expires</label>
    <type>DateTime</type>
</CustomField>