force-app/main/default/objects/vlocity_ps__UserNotification__c/fields/vlocity_ps__NotificationType__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__NotificationType__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ASSISTIVE_NOTIFICATION</fullName>
            </value>
            <value>
                <fullName>ERROR_MESSAGE</fullName>
            </value>
            <value>
                <fullName>WARNING_MESSAGE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>