force-app/main/default/objects/vlocity_ps__UserNotification__c/fields/vlocity_ps__ReadDate__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__ReadDate__c</fullName>
    <label>Read</label>
    <type>DateTime</type>
</CustomField>