force-app/main/default/objects/vlocity_ps__UserNotification__c/fields/vlocity_ps__SentDate__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__SentDate__c</fullName>
    <label>Sent</label>
    <type>DateTime</type>
</CustomField>